force-app/main/default/objects/fw1__Payment_Intent__c/fw1__Payment_Intent__c.object-meta.xml
<CustomObject>
    <label>Payment Intent</label>
    <nameField>
        <label>Payment Intent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Intents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>