force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Account__c.field-meta.xml
<CustomField>
    <fullName>fw1__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Intents</relationshipLabel>
    <relationshipName>Payment_Intents</relationshipName>
    <type>Lookup</type>
</CustomField>