force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Billing_City__c.field-meta.xml
<CustomField>
    <fullName>fw1__Billing_City__c</fullName>
    <label>Billing City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>