force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>fw1__Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>