force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Custom_Lookup_Id__c.field-meta.xml
<CustomField>
    <fullName>fw1__Custom_Lookup_Id__c</fullName>
    <label>Custom Lookup Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>