force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Custom_Paid_Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>fw1__Custom_Paid_Amount_Field__c</fullName>
    <label>Custom Paid Amount Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>