force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>fw1__Error_Message__c</fullName>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>