force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Expiry_Month__c.field-meta.xml
<CustomField>
    <fullName>fw1__Expiry_Month__c</fullName>
    <label>Expiry Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>