force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Expiry_Year__c.field-meta.xml
<CustomField>
    <fullName>fw1__Expiry_Year__c</fullName>
    <label>Expiry Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>