force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__GUID__c.field-meta.xml
<CustomField>
    <fullName>fw1__GUID__c</fullName>
    <label>GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>