force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Name_On_Account__c.field-meta.xml
<CustomField>
    <fullName>fw1__Name_On_Account__c</fullName>
    <label>Name On Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>