force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>fw1__Payment_Date__c</fullName>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>