force-app/main/default/objects/fw1__Payment_Intent__c/fields/fw1__Phone__c.field-meta.xml
<CustomField>
    <fullName>fw1__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>